[package]
name = "hasher"
version = "0.1.0"
description = "A rust binding to generate md5 hash value"
authors = ["Md Al Amin"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
